Fix module name

--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,12 @@
 name = "AlgebraicOptimization"
 uuid = "a72ceada-00ec-4ad9-90d3-37b40eaed052"
 license = "MIT"
-authors = ["AlgebraicJulia Developer <email@algebraicjulia.org>"]
+authors = ["Tyler Hanks <teh.hanks@gmail.com>"]
 version = "0.0.1"
 
 [deps]
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 
 [compat]
-Catlab = "^0.14"
-julia = "1.6"
+Catlab = "^0.15"
+julia = "1.9"
