--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,9 @@ authors = ["Tyler Hanks <teh.hanks@gmail.com>"]
 version = "0.0.1"
 
 [deps]
+AlgebraicDynamics = "5fd6ff03-a254-427e-8840-ba658f502e32"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 
 [compat]
 Catlab = "^0.15"
