--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,9 @@ version = "0.0.1"
 AlgebraicDynamics = "5fd6ff03-a254-427e-8840-ba658f502e32"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
 Catlab = "^0.15"
