feat: started benchmarking, cleaned up comments

--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ authors = ["Tyler Hanks <teh.hanks@gmail.com>"]
 version = "0.0.1"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
