--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -23,6 +24,7 @@ Catlab = "0.16.10"
 ForwardDiff = "0.10.36"
 NLsolve = "4.5.1"
 Optim = "1.9.4"
+Plots = "1.40.9"
 Reexport = "1.2.2"
 SparseArrays = "1.10.0"
 StatsBase = "0.34.3"
