--- a/test/Project.toml
+++ b/test/Project.toml
@@ -6,3 +6,4 @@ Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
