--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
@@ -25,6 +26,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Catlab = "0.16.10"
 ForwardDiff = "0.10.36"
 Graphs = "1.12.0"
+Krylov = "0.9.9"
 Metis = "1.5.0"
 NLsolve = "4.5.1"
 Optim = "1.9.4"
