--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ MatrixMarket = "4d4711f2-db25-561a-b6b3-d35e7d4047d3"
 Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
