--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,8 @@ Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
@@ -26,6 +28,8 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Catlab = "0.16.10"
 ForwardDiff = "0.10.36"
 Graphs = "1.12.0"
+Ipopt = "1.7.2"
+JuMP = "1.24.0"
 Krylov = "0.9.9"
 Metis = "1.5.0"
 NLsolve = "4.5.1"
