--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -2,3 +2,6 @@
 AlgebraicOptimization = "a72ceada-00ec-4ad9-90d3-37b40eaed052"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+
+[sources]
+AlgebraicOptimization = {path = "../"}
