--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+CSV = "0.10.15"
 Catlab = "0.16.10"
 ForwardDiff = "0.10.36"
 Graphs = "1.12.0"
@@ -46,4 +47,5 @@ Plots = "1.40.9"
 Reexport = "1.2.2"
 SparseArrays = "1.10.0"
 StatsBase = "0.34.3"
+Tables = "1.12.0"
 julia = "1.10"
