--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearOperators = "5c8ed15e-5a4c-59e4-a42b-c7e8811fb125"
+MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
 MatrixMarket = "4d4711f2-db25-561a-b6b3-d35e7d4047d3"
 Metis = "2679e427-3c69-5b7f-982b-ece356f1e94b"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
@@ -28,6 +29,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 SuiteSparseMatrixCollection = "ac199af8-68bc-55b8-82c4-7abd6f96ed98"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -43,6 +45,7 @@ Ipopt = "1.7.2"
 JuMP = "1.24.0"
 Krylov = "0.9.9"
 LinearOperators = "2.9.0"
+MLStyle = "0.4.17"
 Metis = "1.5.0"
 NLsolve = "4.5.1"
 Optim = "1.9.4"
@@ -50,5 +53,6 @@ Plots = "1.40.9"
 Reexport = "1.2.2"
 SparseArrays = "1.10.0"
 StatsBase = "0.34.3"
+StructTypes = "1.11.0"
 Tables = "1.12.0"
 julia = "1.10"
