--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,7 +1,11 @@
 [deps]
 AlgebraicOptimization = "a72ceada-00ec-4ad9-90d3-37b40eaed052"
+BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [sources]
 AlgebraicOptimization = {path = "../"}
